[package]
name = "lcm-gen"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]

[[bin]]
name = "lcm-gen-rust"
path = "src/lcm-gen.rs"
required-features = ["cli"]

[dependencies]
pest = "1.0.3"
pest_derive = "1.0.3"
failure = "0.1.1"
structopt = { version = "0.2.1", optional = true }
itertools = "0.7.6"
heck = "0.3.0"

[dev-dependencies]
pretty_assertions = "0.5.0"
assert_cli = "0.5.4"
tempdir = "0.3.6"

[features]
default = ["cli"]
cli = ["structopt"]
