[package]
name = "lcm-gen"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]

[[bin]]
name = "lcm-gen-rust"
path = "src/lcm-gen.rs"
required-features = ["cli"]

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.7"
failure = "0.1.1"
structopt = { version = "0.3.21", optional = true }
itertools = "0.8.0"
heck = "0.3.0"

[dev-dependencies]
pretty_assertions = "0.6.0"
assert_cli = "0.6.0"
tempdir = "0.3.6"

[features]
default = ["cli"]
cli = ["structopt"]
